Let user zoom content by making the 'viewport' meta tag less strict

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="myApp">
 <head>
     <title>Go!</title>
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="src/css/app.css">
     <link rel="stylesheet" type="text/css" href="src/css/fonts.css">
     <script type="text/javascript" src="src/js/js_top.js"></script>
