--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html ng-app="myApp">
+<!--[if lt IE 7]>      <html ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7 ie6"> <![endif]-->
+<!--[if IE 7]>         <html ng-app="myApp" class="no-js lt-ie9 lt-ie8 ie7"> <![endif]-->
+<!--[if IE 8]>         <html ng-app="myApp" class="no-js lt-ie9 ie8"> <![endif]-->
+<!--[if gt IE 8]><!--> <html ng-app="myApp" class="no-js"> <!--<![endif]-->
 <head>
     <title>Go!</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
