--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7 ie6"> <![endif]-->
-<!--[if IE 7]>         <html ng-app="myApp" class="no-js lt-ie9 lt-ie8 ie7"> <![endif]-->
-<!--[if IE 8]>         <html ng-app="myApp" class="no-js lt-ie9 ie8"> <![endif]-->
-<!--[if gt IE 8]><!--> <html ng-app="myApp" class="no-js"> <!--<![endif]-->
+<html ng-app="myApp" class="no-js">
 <head>
     <title>Go!</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
@@ -10,7 +7,10 @@
     <link rel="stylesheet" type="text/css" href="src/css/fonts.css">
     <script type="text/javascript" src="src/js/js_top.js"></script>
 </head>
-<body>
+<!--[if lt IE 7]>      <body class="lt-ie9 lt-ie8 lt-ie7 ie6"> <![endif]-->
+<!--[if IE 7]>         <body class="lt-ie9 lt-ie8 ie7"> <![endif]-->
+<!--[if IE 8]>         <body class="lt-ie9 ie8"> <![endif]-->
+<!--[if gt IE 8]><!--> <body> <!--<![endif]-->
     <div ng-controller="myController">
         <div ng-show="showOnLoad">
             <p>Hello World!</p>
