--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html ng-app="myApp" class="no-js">
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <title>Go!</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="src/css/app.css">
