--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html ng-app="myApp" class="no-js">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
